feat: implement modal closing functionality

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <dialog id="myDialog">
         <h2>modal title</h2>
         <p>this is the content of modal.</p>
-        <button>close</button>
+        <button class="close-modal">close</button>
     </dialog>
 </body>
 </html>
